--- a/styles/general.css
+++ b/styles/general.css
@@ -91,7 +91,10 @@ p {
   .abaut-us article {
     grid-template-columns: auto;
   }
-
+  .services {
+    font-size: larger;
+    display: flex;
+  }
 }
 
 
@@ -122,6 +125,7 @@ p {
 .card-container::-webkit-scrollbar {
   display: none;
 }
+
 .fa-arrow-right,
 .fa-arrow-left {
   color: rgb(255, 189, 68);
