--- a/styles/form.css
+++ b/styles/form.css
@@ -3,13 +3,14 @@
   background: linear-gradient(to right, #1e3c72, #1f4e8a, #2a6cb3, #2a5298);
   color: #ffffff;
   padding-bottom: 35px;
-
 }
+
 .title-contact h1 {
   font-size: 3.5em;
   margin-bottom: 20px;
   margin-left: 20%;
 }
+
 .title-contact h5 {
   font-size: .85em;
   opacity: 0.8;
@@ -48,6 +49,7 @@
   justify-content: center;
   flex-direction: column;
 }
+
 .container-form h2 {
   font-size: 1.7em;
 }
@@ -57,17 +59,21 @@
   display: flex;
   margin-top: 40px;
 }
+
 .section-form label {
   margin-top: 15px;
   font-size: larger;
 }
+
 .section-form input {
   min-height: 40px;
   font-size: large;
+  padding-left: 4px;
 }
+
 textarea {
   resize: vertical;
-  min-height: 100px;
+  min-height: 105px;
   margin-bottom: 10px;
 }
 
@@ -81,9 +87,11 @@ textarea {
   border-radius: 5px;
   transition: all .4s;
 }
+
 #submit:hover {
   background-color: rgb(162, 255, 224);
 }
+
 /* article slide */
 .article-slide {
   display: flex;
@@ -92,10 +100,12 @@ textarea {
   margin: 80px;
   justify-content: center;
 }
+
 .article-slide h2 {
   font-size: 2.5em;
   color: var(--titles);
 }
+
 .article-slide h3 {
   font-size: 2.6em;
   color: var(--titles);
@@ -103,14 +113,15 @@ textarea {
   margin-bottom: 10px;
   padding: 0;
 }
+
 .article-slide p {
   font-size: 1.2em;
   font-style: italic;
 }
+
 .company-img {
   width: 100%;
   border-radius: 10px;
-
 }
 
 /*map*/
@@ -122,12 +133,13 @@ textarea {
   padding-top: 40px;
   padding-bottom: 100px;
   background-color: #ececec;
-
 }
+
 .container-map h2 {
   font-size: 2.5em;
   color: var(--titles);
 }
+
 .google-maps {
   width: 64%;
   border: none;
