--- a/styles/general.css
+++ b/styles/general.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
   text-decoration: none;
 }
-
+body, html {
+  overflow-x: hidden;
+}
 body {
   margin: 0;
   padding: 0;
