--- a/styles/footer.css
+++ b/styles/footer.css
@@ -10,7 +10,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 90px;
+  gap: 30px;
 }
 
 .icon-footer {
