--- a/styles/general.css
+++ b/styles/general.css
@@ -3,15 +3,15 @@
   list-style: none;
   box-sizing: border-box;
   text-decoration: none;
+  margin: 0;
+  padding: 0;
 }
 body, html {
   overflow-x: hidden;
 }
 body {
-  margin: 0;
-  padding: 0;
+
   display: grid;
-  grid-template-rows: auto 1fr auto;
   max-width: 100%;
 }
 
@@ -53,7 +53,7 @@ body {
 }
 .start article div h2 {
   font-size: var(--subtitle-text-size);
-  margin: 0px;
+  margin-top: 30px;
   color: var(--title-color);
 }
 
@@ -66,12 +66,15 @@ p {
   display: flex;
   flex-direction: column;
   background-color: var(--grey-background);
+  padding-bottom: 100px;
 }
 
 .abaut-us h2 {
   text-align: center;
   font-size: var(--title-text-size);
   color: var(--title-color);
+  margin-bottom: 40px;
+  margin-top:30px;
 }
 
 .abaut-us article h3 {
@@ -92,15 +95,7 @@ p {
   flex-direction: column;
 }
 
-@media (max-width: 800px) {
-  .abaut-us article {
-    grid-template-columns: auto;
-  }
-  .services {
-    font-size: var(--general-text-size);
-    display: flex;
-  }
-}
+
 
 .testimonials {
   margin: 50px;
@@ -189,6 +184,7 @@ p {
 .services h2 {
   font-size: var(--title-text-size);
   color: var(--title-color);
+  margin-bottom: 30px;
 }
 .services p {
   font-size: var(--general-text-size);
@@ -211,8 +207,8 @@ p {
 
 .idea {
   border-radius: 50px 0 0 50px;
-  width: 40%;
-  height: 40%;
+  width: 50%;
+  height: 50%;
 }
 
 @media (max-width: 1250px) {
@@ -227,9 +223,23 @@ p {
   }
   .idea {
     border-radius: 50px 0 50px 0;
-    min-width: 200px;
+    width: 70%;
+    height: 70%;
   }
   .card {
     width: 40%;
+  }
+}
+
+@media (max-width: 800px) {
+  .abaut-us article {
+    grid-template-columns: auto;
+  }
+  .services {
+    font-size: var(--general-text-size);
+    display: flex;
+  }
+  .start article div h1 {
+    font-size: 3em;
   }
 }
