--- a/templates/galery.html
+++ b/templates/galery.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../styles/general.css">
   <link rel="stylesheet" href="../styles/footer.css">
   <link rel="stylesheet" href="../styles/header.css">
+  <link rel="stylesheet" href="../styles/galery.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
@@ -43,8 +44,130 @@
     </div>
   </header>
   
-  <main>
+  <h1 class="title-galery">Nuestros productos:</h1>
+  <main class="galery-container">
+    <section class="galery">
+      <div class="product-card">
+        <img src="https://picsum.photos/400/400?random=1" width="400" height="400" alt="Producto aleatorio">
+        <div>
+          <h3 class="product-name">Producto A</h3>
+          <div>
+            <p class="product-price">1.50$</p>
+            <button class="product-add">Añadir al carrito</button>
+          </div>
+          <p class="product-store">Productos restantes: 5</p>
+        </div>
+      </div>
+      
+      <div class="product-card">
+        <img src="https://picsum.photos/400/400?random=2" width="400" height="400" alt="Producto aleatorio">
+        <div>
+          <h3 class="product-name">Producto B</h3>
+          <div>
+            <p class="product-price">3.20$</p>
+            <button class="product-add">Añadir al carrito</button>
+          </div>
+          <p class="product-store">Productos restantes: 12</p>
+        </div>
+      </div>
+      
+      <div class="product-card">
+        <img src="https://picsum.photos/400/400?random=3" width="400" height="400" alt="Producto aleatorio">
+        <div>
+          <h3 class="product-name">Producto C</h3>
+          <div>
+            <p class="product-price">0.99$</p>
+            <button class="product-add">Añadir al carrito</button>
+          </div>
+          <p class="product-store">Productos restantes: 20</p>
+        </div>
+      </div>
+      <div class="product-card">
+        <img src="https://picsum.photos/400/400?random=4" width="400" height="400" alt="Producto aleatorio">
+        <div>
+          <h3 class="product-name">Producto D</h3>
+          <div>
+            <p class="product-price">5.00$</p>
+            <button class="product-add">Añadir al carrito</button>
+          </div>
+          <p class="product-store">Productos restantes: 3</p>
+        </div>
+      </div>
+      
+      <div class="product-card">
+        <img src="https://picsum.photos/400/400?random=5" width="400" height="400" alt="Producto aleatorio">
+        <div>
+          <h3 class="product-name">Producto E</h3>
+          <div>
+            <p class="product-price">7.99$</p>
+            <button class="product-add">Añadir al carrito</button>
+          </div>
+          <p class="product-store">Productos restantes: 8</p>
+        </div>
+      </div>
+      
+      <div class="product-card">
+        <img src="https://picsum.photos/400/400?random=6" width="400" height="400" alt="Producto aleatorio">
+        <div>
+          <h3 class="product-name">Producto F</h3>
+          <div>
+            <p class="product-price">2.50$</p>
+            <button class="product-add">Añadir al carrito</button>
+          </div>
+          <p class="product-store">Productos restantes: 15</p>
+        </div>
+      </div>
+      
+      <div class="product-card">
+        <img src="https://picsum.photos/400/400?random=7" width="400" height="400" alt="Producto aleatorio">
+        <div>
+          <h3 class="product-name">Producto G</h3>
+          <div>
+            <p class="product-price">4.20$</p>
+            <button class="product-add">Añadir al carrito</button>
+          </div>
+          <p class="product-store">Productos restantes: 6</p>
+        </div>
+      </div>
+      
+      <div class="product-card">
+        <img src="https://picsum.photos/400/400?random=8" width="400" height="400" alt="Producto aleatorio">
+        <div>
+          <h3 class="product-name">Producto H</h3>
+          <div>
+            <p class="product-price">1.80$</p>
+            <button class="product-add">Añadir al carrito</button>
+          </div>
+          <p class="product-store">Productos restantes: 10</p>
+        </div>
+      </div>
+      
+      <div class="product-card">
+        <img src="https://picsum.photos/400/400?random=9" width="400" height="400" alt="Producto aleatorio">
+        <div>
+          <h3 class="product-name">Producto I</h3>
+          <div>
+            <p class="product-price">3.75$</p>
+            <button class="product-add">Añadir al carrito</button>
+          </div>
+          <p class="product-store">Productos restantes: 4</p>
+        </div>
+      </div>
+      
+      <div class="product-card">
+        <img src="https://picsum.photos/400/400?random=10" width="400" height="400" alt="Producto aleatorio">
+        <div>
+          <h3 class="product-name">Producto J</h3>
+          <div>
+            <p class="product-price">6.50$</p>
+            <button class="product-add">Añadir al carrito</button>
+          </div>
+          <p class="product-store">Productos restantes: 2</p>
+        </div>
+      </div>
 
+    </section>
+    
   </main>
 
   <footer>
