--- a/templates/galery.html
+++ b/templates/galery.html
@@ -186,5 +186,6 @@
     </ul>
     <p>@Todos los derechos reservados</p>
   </footer>
+  <script src="../scripts/burger.js"></script>
 </body>
 </html>
