--- a/styles/galery.css
+++ b/styles/galery.css
@@ -12,7 +12,7 @@
 }
 
 .product-card {
-  background-color: #e4fdf8;
+  background-image: linear-gradient(#e4fdf8, #aafcda, #e4fdf8);
   display: flex;
   flex-direction: column;
   align-items: center;
