--- a/templates/contact.html
+++ b/templates/contact.html
@@ -94,17 +94,17 @@
   </section>
   <footer>
     <div class="social-media-container">
-      <i class="fab fa-instagram icon-footer"></i>
-      <i class="fab fa-twitter icon-footer"></i>
-      <i class="fab fa-facebook icon-footer"></i>
-      <i class="fab fa-linkedin icon-footer"></i>
-      <i class="fas fa-envelope icon-footer"></i>
+      <i class="fab fa-instagram icon-footer"><a href="https://www.instagram.com/"></a></i>
+      <i class="fab fa-twitter icon-footer"><a href="https://x.com/?lang=es"></a></i>
+      <i class="fab fa-facebook icon-footer"><a href="https://www.facebook.com/"></a></i>
+      <i class="fab fa-linkedin icon-footer"><a href="https://es.linkedin.com/"></a></i>
+      <i class="fas fa-envelope icon-footer"><a href="https://workspace.google.com/intl/es/gmail/"></a></i>
     </div>
     <ul class="menu-footer">
-      <li class="menu-element"><a href="" class="menu-icon">Inicio</a></li>
-      <li class="menu-element"><a href="" class="menu-icon">Contacto</a></li>
-      <li class="menu-element"><a href="" class="menu-icon">Equipo</a></li>
-      <li class="menu-element"><a href="" class="menu-icon">Sobre nosotros</a></li>
+      <li class="menu-element"><a href="../index.html" class="menu-icon">Inicio</a></li>
+      <li class="menu-element"><a href="./contact.html" class="menu-icon">Contacto</a></li>
+      <li class="menu-element"><a href="./presupuesto.html" class="menu-icon">Presupuesto</a></li>
+      <li class="menu-element"><a href="./galery.html" class="menu-icon">Tienda</a></li>
     </ul>
     <p>@Todos los derechos reservados</p>
   </footer>
