--- a/templates/galery.html
+++ b/templates/galery.html
@@ -179,10 +179,10 @@
       <i class="fas fa-envelope icon-footer"></i>
     </div>
     <ul class="menu-footer">
-      <li class="menu-element"><a href="" class="menu-icon">Inicio</a></li>
-      <li class="menu-element"><a href="" class="menu-icon">Contacto</a></li>
-      <li class="menu-element"><a href="" class="menu-icon">Equipo</a></li>
-      <li class="menu-element"><a href="" class="menu-icon">Sobre nosotros</a></li>
+      <li class="menu-element"><a href="../index.html" class="menu-icon">Inicio</a></li>
+      <li class="menu-element"><a href="./contact.html" class="menu-icon">Contacto</a></li>
+      <li class="menu-element"><a href="./presupuesto.html" class="menu-icon">Presupuesto</a></li>
+      <li class="menu-element"><a href="./galery.html" class="menu-icon">Tienda</a></li>
     </ul>
     <p>@Todos los derechos reservados</p>
   </footer>
